# pegasus

./: .gitignore
chisel/src/main/scala/pegasus/: PegasusShell.scala
driver/: CMakeLists.txt
driver/src/: main.cc  scu.cc  scu.h  uart.cc  uart.h  xdma.cc  xdma.h
vivado/: build-bitstream.sh
vivado/scripts/: main.tcl  program_fpga.tcl
vivado/scripts/bd/: create_xdma_bd.tcl
vivado/scripts/constraints/: au280.xdc
vivado/scripts/ip/: axi_clkconv.tcl  axi_dwidth.tcl  axi_ic.tcl  ddr4.tcl  dwidth_h2c.tcl  dwidth_soc.tcl  hbm2.tcl  proc_sys_reset.tcl  xdma.tcl
vivado/scripts/rtl/: EICG_wrapper.v
